--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
 
 <p align="justify"><img class="image" width="50" height="50" src="Images/mike.png"><font color="red">I am actively looking for open PhD positions. Please reach out if you are hiring and you feel that I might be a good fit for your research group.</font></p>
 <h2><a name="About">About</a></h2>
+<p>I am interested in the broad areas of Bio Technology, BioChemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I had worked on the production of biosimilar monoclonal antibody (mAb), with the <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Code for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). I have also worked on an independent project     </p>
+<p>Currently I am looking for PhD position in the field of biotechnology predominantly in the area of molecular biology,microbiology,cell biology or genetics. Previously I was working in R&amp;D unit of an industry where I was working mainly for production of biosimilar monoclonal antibody (transfection,upstream processing and purification).</p>
+<p>Academically,I have completed B.Tech in Bio engineering from NIT Agartala, India and M.Tech in Biochemical Engineering IIT Varanasi,India. During B.Tech I have worked on &ldquo;Optimization of biofilm formation by pseudomonas aeruginosa&rdquo;.My M.Tech project work was based on &ldquo;Isolation and characterization of pigment producing bacteria from Arctic stone&rdquo;.</p>
+<p>I have done internships in plant tissue culture and in the domain of fisheries. Other than that,in the field of biomedical Engineering I have worked for a project to make a device which can sense minimum change in temperature during wound healing process.</p>
+<p>my work experiences are mostly in the field of biotechnology - Cell line engineering,Upstream processing technology, Advance analytical technology,PCR technology, DNA sequencing. I have also worked on plant tissue culture and molecular biology lab of Department of Fisheries. My academic research works were based on microbiology.
+Other than that I have explored the field of biomedical engineering where, I have made a device and had an advanced training in biomedical applications.</p>
 <p>I am a Post-Doctoral Researcher in the <a href="https://team.inria.fr/taran/">TARAN</a> (erstwhile CAIRN) team of <a href="https://www.irisa.fr/en">IRISA</a>, <a href="https://www.inria.fr/en">INRIA</a> and <a href="https://www.univ-rennes1.fr/">Université de Rennes 1</a>, hosted by <a href="http://people.irisa.fr/Cedric.Killian/">Dr. Cedric Killian</a> and <a href="http://people.rennes.inria.fr/Olivier.Sentieys/">Prof. Olivier Sentieys</a>. Previously, I was a Senior Silicon Design Engineer at <a href="https://www.amd.com/">AMD</a>, where I was part of the performance modelling team that designed the <a href="https://en.wikipedia.org/wiki/Zen_(microarchitecture)">Zen</a> microarchitecture.</p>
 <p>I received the prestigious <a href="https://www.iitg.ac.in/acad/convocation/24/">Best PhD Thesis Award</a> in <a href="https://www.iitg.ac.in/cse/">Computer Science &amp; Engineering</a> from <a href="https://www.iitg.ac.in/">Indian Institute of Technology (IIT) Guwahati</a>, India, where I was supervised by <a href="http://www.iitg.ac.in/johnjose/">Dr. John Jose</a>. My dissertation focused on the design of data-aware on-chip networks to improve the performance of many-core systems. One of my works presented at ICCD 2020 can be found <a href="https://tinyurl.com/iccd-2020">here</a>, and an extended abstract/summary of my dissertation presented at DAC PhD Forum 2021 can be found <a href="https://tinyurl.com/dac-phd-2021">here</a>. </p>
 <p>My broad area of research is Computer Architecture, and I frequently collaborate with <a href="http://utenti.dieei.unict.it/users/mpalesi/">Dr. Maurizio Palesi</a> of University of Catania, Italy and <a href="https://www.cise.ufl.edu/~prabhat/">Prof. Prabhat Mishra</a> of University of Florida, USA. Currently, I am involved in multiple projects that focus on the design of efficient on-chip networks, caches and DNN accelerators.</p>
@@ -79,16 +85,79 @@
 <ul>
 <li><p>Bio Technology : Molecular Biology, Microbiology, Cell Biology, Genetics.</p>
 </li>
-<li><p>BioChemical Enggineering : Reactor Design, Upstream Process Technology, Fermentation Technology.</p>
+<li><p>BioChemical Engineering : Reactor Design, Upstream Process Technology, Fermentation Technology.</p>
 </li>
 <li><p>Food Technology : Biochemistry of Processing and Preservation, Food Microbiology, Food Fermentation Technology.</p>
 </li>
 </ul>
-<h2><a name="News">Recent News</a></h2>
-<div class="infoblock">
-<div class="blockcontent">
-<p>26-09-2021 : I have been invited to serve as the Virtual Logistics Chair of <a href="https://nocs2022.github.io/">NOCS 2022</a></p>
-</div></div>
+<h2><a name="Experience">Research Experience</a></h2>
+<ul>
+<li><p>June 2020 - April 2021 : <b>Research Associate</b>, <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, Maharastra, India</p>
+<ul>
+<li><p>Plasmid sequence confirmation of surface protein of <i>SARS-CoV-2</i> virus</p>
+</li>
+<li><p>Plasmid extraction by ELISA technique</p>
+</li>
+<li><p>Production of biosimilar monoclonal antibody (mAb): transfection, upstream processing, and purification</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>2018 - 2020 : <b>Graduate Student</b>, <a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>, Uttar Pradesh, India</p>
+<ul>
+<li><p>Isolation and characterisation of pigment producing bacteria from Arctic stone</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>January 2018 - March 2018 : <b>Technical Trainee</b>, <a href="https://www.harveybiomedical.in/">Harvey Biomedical</a>, Karnataka, India</p>
+<ul>
+<li><p>Advance training in biomedical applications</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>2016 - 2017 : <b>Undergraduate Student</b>, <a href="https://www.nita.ac.in/">NIT Agartala</a>, Tripura, India</p>
+<ul>
+<li><p>Optimisation of biofilm formation by <i>Pseudomonas aeruginosa</i></p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>June 2016 : <b>Research Intern</b>, <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, Tamil Nadu, India</p>
+<ul>
+<li><p>Temperature data logging to detect fluctuations during wound healing</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>December 2015 : <b>Research Intern</b>, <a href="https://www.cofcau.nic.in/">College of Fisheries</a>, Tripura, India</p>
+<ul>
+<li><p>Hands on training on PCR and DNA sequencing machines</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>May 2015 : <b>Research Intern</b>, <a href="https://horti.tripura.gov.in/hrc">Horticulture Research Complex</a>, Tripura, India</p>
+<ul>
+<li><p>Tissue culture of <i>Musa acuminata</i></p>
+</li>
+</ul>
+
+</li>
+</ul>
 <h2><a name="Education">Education</a></h2>
 <ul>
 <li><p>2018 - 2020 : <b>MTech</b> in Biochemical Engineering at <a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>, Uttar Pradesh, India</p>
