--- a/index.html
+++ b/index.html
@@ -55,15 +55,12 @@
 	<nav>
 		<a href="#About">About</a> |
 		<a href="#Research">Research</a> |
-		<a href="#News">News</a> |
-		<a href="#Publications">Publications</a> |
-		<a href="education.html#Education">Education</a> |
-		<a href="education.html#Achievements">Achievements</a> |
-		<a href="education.html#Teaching">Teaching</a> |
-		<a href="education.html#Service">Service</a> |
-		<a href="others.html#Genealogy">Genealogy</a> |
-		<a href="others.html#Others">Others</a> |
-		<a href="calendar.html#Calendar">Calendar</a>
+		<a href="#Experience">Experience</a> |
+		<a href="#Education">Education</a> |
+		<a href="#Achievements">Achievements</a> |
+		<a href="#Teaching">Teaching</a> |
+		<a href="#Conferences">Conferences</a> |
+		<a href="#Outside">Outside</a>
 	</nav>
 </center>
 </b>
@@ -71,21 +68,12 @@
 
 <p align="justify"><img class="image" width="50" height="50" src="Images/mike.png"><font color="red">I am actively looking for open PhD positions. Please reach out if you are hiring and you feel that I might be a good fit for your research group.</font></p>
 <h2><a name="About">About</a></h2>
-<p>I am interested in the broad areas of Bio Technology, BioChemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I had worked on the production of biosimilar monoclonal antibody (mAb), with the <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Code for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). I have also worked on an independent project     </p>
-<p>Currently I am looking for PhD position in the field of biotechnology predominantly in the area of molecular biology,microbiology,cell biology or genetics. Previously I was working in R&amp;D unit of an industry where I was working mainly for production of biosimilar monoclonal antibody (transfection,upstream processing and purification).</p>
-<p>Academically,I have completed B.Tech in Bio engineering from NIT Agartala, India and M.Tech in Biochemical Engineering IIT Varanasi,India. During B.Tech I have worked on &ldquo;Optimization of biofilm formation by pseudomonas aeruginosa&rdquo;.My M.Tech project work was based on &ldquo;Isolation and characterization of pigment producing bacteria from Arctic stone&rdquo;.</p>
-<p>I have done internships in plant tissue culture and in the domain of fisheries. Other than that,in the field of biomedical Engineering I have worked for a project to make a device which can sense minimum change in temperature during wound healing process.</p>
-<p>my work experiences are mostly in the field of biotechnology - Cell line engineering,Upstream processing technology, Advance analytical technology,PCR technology, DNA sequencing. I have also worked on plant tissue culture and molecular biology lab of Department of Fisheries. My academic research works were based on microbiology.
-Other than that I have explored the field of biomedical engineering where, I have made a device and had an advanced training in biomedical applications.</p>
-<p>I am a Post-Doctoral Researcher in the <a href="https://team.inria.fr/taran/">TARAN</a> (erstwhile CAIRN) team of <a href="https://www.irisa.fr/en">IRISA</a>, <a href="https://www.inria.fr/en">INRIA</a> and <a href="https://www.univ-rennes1.fr/">Université de Rennes 1</a>, hosted by <a href="http://people.irisa.fr/Cedric.Killian/">Dr. Cedric Killian</a> and <a href="http://people.rennes.inria.fr/Olivier.Sentieys/">Prof. Olivier Sentieys</a>. Previously, I was a Senior Silicon Design Engineer at <a href="https://www.amd.com/">AMD</a>, where I was part of the performance modelling team that designed the <a href="https://en.wikipedia.org/wiki/Zen_(microarchitecture)">Zen</a> microarchitecture.</p>
-<p>I received the prestigious <a href="https://www.iitg.ac.in/acad/convocation/24/">Best PhD Thesis Award</a> in <a href="https://www.iitg.ac.in/cse/">Computer Science &amp; Engineering</a> from <a href="https://www.iitg.ac.in/">Indian Institute of Technology (IIT) Guwahati</a>, India, where I was supervised by <a href="http://www.iitg.ac.in/johnjose/">Dr. John Jose</a>. My dissertation focused on the design of data-aware on-chip networks to improve the performance of many-core systems. One of my works presented at ICCD 2020 can be found <a href="https://tinyurl.com/iccd-2020">here</a>, and an extended abstract/summary of my dissertation presented at DAC PhD Forum 2021 can be found <a href="https://tinyurl.com/dac-phd-2021">here</a>. </p>
-<p>My broad area of research is Computer Architecture, and I frequently collaborate with <a href="http://utenti.dieei.unict.it/users/mpalesi/">Dr. Maurizio Palesi</a> of University of Catania, Italy and <a href="https://www.cise.ufl.edu/~prabhat/">Prof. Prabhat Mishra</a> of University of Florida, USA. Currently, I am involved in multiple projects that focus on the design of efficient on-chip networks, caches and DNN accelerators.</p>
-<p>I work with the <a href="http://www.gem5.org/">gem5 simulator</a> and have recorded multiple tutorial videos to get started with it. My videos have one of the highest number of views (26K+) on <a href="https://www.youtube.com/">YouTube</a> among all the gem5 simulator based tutorials. Anyone interested in learning the gem5 simulator may consider checking some of the videos <a href="https://tinyurl.com/abhijitcse-gem5">here</a>.</p>
+<p>I am actively looking for open PhD positions. I am interested in the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). I interned at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a device to detect temperature fluctuations during the wound healing process.</p>
 <h2><a name="Research">Research Interests</a></h2>
 <ul>
 <li><p>Bio Technology : Molecular Biology, Microbiology, Cell Biology, Genetics.</p>
 </li>
-<li><p>BioChemical Engineering : Reactor Design, Upstream Process Technology, Fermentation Technology.</p>
+<li><p>Biochemical Engineering : Reactor Design, Upstream Process Technology, Fermentation Technology.</p>
 </li>
 <li><p>Food Technology : Biochemistry of Processing and Preservation, Food Microbiology, Food Fermentation Technology.</p>
 </li>
@@ -200,6 +188,8 @@ NIT Agartala, Tripura, India, March &ndash; April 2016</p>
 NIT Agartala, Tripura, India, September 2014</p>
 </li>
 </ul>
+<h2><a name="Outside">Outside of Work</a></h2>
+<p>I am trained in <a href="https://en.wikipedia.org/wiki/Bharatanatyam">Bharatanatyam</a> form of the Indian classical dance. I also enjoy playing the guitar and reading political philosophy.</p>
 <hr size="2" noshade color="#aaaaaa">
 <center><p><b><a href="#Top">Back to Top</a></b></p></center>
 <hr size="2" noshade color="#aaaaaa">
