--- a/index.html
+++ b/index.html
@@ -15,35 +15,23 @@
 	<tbody>
 		<tr>
 			<td width="40%" align="center"><p align="right">
-				Post-Doctoral Researcher<br>
-				<a href="https://team.inria.fr/taran/">TARAN</a> (erstwhile CAIRN) Team<br>
-				<a href="https://www.irisa.fr/en">IRISA</a>, <a href="https://www.inria.fr/en">INRIA</a>, and <a href="https://www.univ-rennes1.fr/">Université de Rennes 1</a><br>
-				<a href="https://www.linkedin.com/in/abhijitcse">
+				Prospective PhD Scholar<br>
+				BioTech/Biochem Engg/Food Tech<br>
+				BTech (<a href="https://www.nita.ac.in/">NIT Agartala</a>), MTech (<a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>)<br>
+				<a href="https://www.linkedin.com/in/jenifardas/">
 					<img class="logo" src="Images/linkedin.svg" title="LinkedIn">
-				</a>
-				<a href="https://twitter.com/abhijitcs">
-					<img class="logo" src="Images/twitter.svg" title="Twitter">
-				</a>
-				<a href="https://www.youtube.com/channel/UCErBuAr_1y66I7cqG0yCjhg">
-					<img class="logo" src="Images/youtube.svg" title="YouTube">
 				</a>
 			</td>
 			<td width="20%" align="center">
 				<img class="photo" src="Images/Jenifar-Das.jpg" title="Jenifar Das" width="103" height="103">
 			</td>
 			<td width="40%" align="center"><p align="left">
-				Room 307N, <a href="https://www.enssat.fr/">ENSSAT</a> Campus<br>
-				6 Rue de Kerampont, Lannion, France - 22300<br>
+				Krishna Nagar Nutan Palli<br>
+				Agartala, West Tripura, India - 799001<br>
 				<b>Email:</b> jenifardasbce at gmail.com<br>
 				<a href="mailto:jenifardasbce@gmail.com">
 					<img class="logo" src="Images/mail.svg" title="Send Email"">
-				</a>
-				<a href="https://scholar.google.com/citations?user=UDIIkgYAAAAJ&hl=en">
-					<img class="logo" src="Images/scholar.svg" title="Google Scholar">
-				</a>
-				<a href="https://dblp.uni-trier.de/pers/hd/d/Das_0002:Abhijit">
-					<img class="logo" src="Images/dblp.svg" title="DBLP">
-				</a>				
+				</a>			
 			</td>
 		</tr>
 	</tbody>
@@ -68,7 +56,7 @@
 
 <p align="justify"><img class="image" width="50" height="50" src="Images/mike.png"><font color="red">I am actively looking for open PhD positions. Please reach out if you are hiring and you feel that I might be a good fit for your research group.</font></p>
 <h2><a name="About">About</a></h2>
-<p>I am actively looking for open PhD positions. I am interested in the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). I interned at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a device to detect temperature fluctuations during the wound healing process.</p>
+<p>I am currently looking for open PhD positions in one of the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). Apart from that, I have explored Biomedical Engineering through an internship at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a device to detect temperature fluctuations during the wound healing process. I have also explored Ichthyology/Fishery and Plant Tissue Culture through a couple of other internships.</p>
 <h2><a name="Research">Research Interests</a></h2>
 <ul>
 <li><p>Bio Technology : Molecular Biology, Microbiology, Cell Biology, Genetics.</p>
