--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <p align="justify"><img class="image" width="50" height="50" src="Images/mike.png"><font color="red">I am actively looking for open PhD positions. Please reach out if you are hiring and you feel that I might be a good fit for your research group.</font></p>
 <h2><a name="About">About</a></h2>
-<p>I am currently looking for open PhD positions in one of the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). Apart from that, I have explored Biomedical Engineering through an internship at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a device to detect temperature fluctuations during the wound healing process. I have also explored Ichthyology/Fishery and Plant Tissue Culture through a couple of other internships.</p>
+<p>I am currently looking for open PhD positions in one of the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). Apart from that, I have explored Biomedical Engineering through an internship at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a device to detect minimal temperature fluctuations during the wound healing process. I have also explored Ichthyology/Fishery and Plant Tissue Culture through a couple of other internships.</p>
 <h2><a name="Research">Research Interests</a></h2>
 <ul>
 <li><p>Bio Technology : Molecular Biology, Microbiology, Cell Biology, Genetics.</p>
@@ -110,7 +110,7 @@
 <ul>
 <li><p>June 2016 : <b>Research Intern</b>, <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, Tamil Nadu, India</p>
 <ul>
-<li><p>Temperature data logging to detect fluctuations during wound healing</p>
+<li><p>Temperature data logging to detect minimal fluctuations during wound healing</p>
 </li>
 </ul>
 
@@ -143,11 +143,15 @@
 </ul>
 <h2><a name="Achievements">Achievements</a></h2>
 <ul>
-<li><p>2018 - 2020 : <b>GATE Fellowship</b> for MTech by MHRD (now MoE), Government of India</p>
+<li><p>2018 - 2020 : <b>GATE Fellowship</b> for MTech by Ministry of Education, Government of India</p>
 </li>
 <li><p>2017 : <b>Basic Medical Coding Certificate</b> from Intelenet Training Academy, Chennai, Tamil Nadu, India</p>
 </li>
 <li><p>2012 : <b>Certification on Computer Application</b> from The Computer Point, New Delhi, India</p>
+</li>
+<li><p>2009 - 2010 : <b>Best Cadet</b>, North Eastern Region, in <a href="https://en.wikipedia.org/wiki/National_Cadet_Corps_(India)">National Cadet Corps (NCC)</a> by Ministry of Defence, Government of India  </p>
+</li>
+<li><p>2009 : <b>Certificate - A</b> in <a href="https://en.wikipedia.org/wiki/National_Cadet_Corps_(India)">National Cadet Corps (NCC)</a> by Ministry of Defence, Government of India</p>
 </li>
 </ul>
 <h2><a name="Teaching">Teaching Assistance</a></h2>
