--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 </li>
 <li><p>2012 : <b>Certification on Computer Application</b> from The Computer Point, New Delhi, India</p>
 </li>
-<li><p>2009 - 2010 : <b>Best Cadet</b>, North Eastern Region, in <a href="https://en.wikipedia.org/wiki/National_Cadet_Corps_(India)">National Cadet Corps (NCC)</a> by Ministry of Defence, Government of India  </p>
+<li><p>2009 - 2010 : <b>Best Cadet</b>, North Eastern Region in <a href="https://en.wikipedia.org/wiki/National_Cadet_Corps_(India)">National Cadet Corps (NCC)</a> by Ministry of Defence, Government of India  </p>
 </li>
 <li><p>2009 : <b>Certificate - A</b> in <a href="https://en.wikipedia.org/wiki/National_Cadet_Corps_(India)">National Cadet Corps (NCC)</a> by Ministry of Defence, Government of India</p>
 </li>
