--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<a href="#About">About</a> |
 		<a href="#Research">Research</a> |
 		<a href="#Experience">Experience</a> |
+		<a href="#Projects">Projects</a> |
 		<a href="#Education">Education</a> |
 		<a href="#Achievements">Achievements</a> |
 		<a href="#Teaching">Teaching</a> |
@@ -134,6 +135,22 @@
 
 </li>
 </ul>
+<h2><a name="Projects">Projects</a></h2>
+<h3>2018 &ndash; 2020 : Isolation and Characterisation of Pigment Producing Bacteria from Arctic Stone</h3>
+<table style="width:100%">
+	<tbody>
+		<tr>
+			<td width="30%" align="center">
+				<img class="image" src="Images/MTech.png" title="Jenifar Das" width="100%" height="50%">
+			</td>
+			<td width="70%" align="center">
+				<p align="justify" style="margin-left:0.5em">
+					Arctic stone sample having pigmented spots have been assessed to isolate and identify pigment producing bacteria. Pigments have vast industrial and medical applications as organic food colorant, textiles colorant and fluorescence based indicator. Pigments (light-absorbing compounds) are generally produced by bacteria in their lifecycle for the purpose of survival. In this work, we have isolated and explored bacterial strains that produce pigments from Arctic stone sample. We have isolated five potential pigment producing bacterial strains. Further, study confirmed that four bacterial strains having potential to produce pigments (1<sup>st</sup> strain produces yellow pigment, 2<sup>nd</sup> strain produces red pigment, 3<sup>rd</sup> strain produces pink pigment, and 4<sup>th</sup> strain produces cream colored pigment). We have optimized the conditions such as growth medium (nutrient broth), temperature (25℃) and pH (alkaline pH) for the growth of the strains and for production of pigments. Morphology of bacterial cells has been identified using different microscopes. The pigments were extracted by solvent extraction method and analyzed by scanning the absorbance with a UV-Vis spectrophotometer. These strains are being characterized using different biochemical tests and 16S rDNA sequencing.
+				</p>
+			</td>
+		</tr>
+	</tbody>
+</table>
 <h2><a name="Education">Education</a></h2>
 <ul>
 <li><p>2018 - 2020 : <b>MTech</b> in Biochemical Engineering at <a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>, Uttar Pradesh, India</p>
