--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 		<a href="#Research">Research</a> |
 		<a href="#Experience">Experience</a> |
 		<a href="#Projects">Projects</a> |
-		<a href="#Education">Education</a> |
-		<a href="#Achievements">Achievements</a> |
-		<a href="#Teaching">Teaching</a> |
-		<a href="#Conferences">Conferences</a> |
-		<a href="#Outside">Outside</a>
+		<a href="education.html#Education">Education</a> |
+		<a href="education.html#Achievements">Achievements</a> |
+		<a href="education.html#Teaching">Teaching</a> |
+		<a href="education.html#Conferences">Conferences</a> |
+		<a href="education.html#Outside">Outside</a>
 	</nav>
 </center>
 </b>
@@ -57,7 +57,7 @@
 
 <p align="justify"><img class="image" width="50" height="50" src="Images/mike.png"><font color="red">I am actively looking for open PhD positions. Please reach out if you are hiring and you feel that I might be a good fit for your research group.</font></p>
 <h2><a name="About">About</a></h2>
-<p>I am currently looking for open PhD positions in one of the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the surface protein of <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). Apart from that, I have explored Biomedical Engineering through an internship at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a <a href="https://photos.app.goo.gl/vrVmY7RZKzkJkgZP7">prototype</a> to detect minimal temperature fluctuations during the wound healing process. I have also explored Ichthyology/Fishery and Plant Tissue Culture through a couple of other internships.</p>
+<p>I am currently looking for open PhD positions in one of the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the surface protein of <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). Apart from that, I have explored Biomedical Engineering through an internship at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a <a href="#CMC">prototype</a> to detect minimal temperature fluctuations during the wound healing process. I have also explored Ichthyology/Fishery and Plant Tissue Culture through a couple of other internships.</p>
 <h2><a name="Research">Research Interests</a></h2>
 <ul>
 <li><p>Bio Technology : Molecular Biology, Microbiology, Cell Biology, Genetics.</p>
@@ -84,7 +84,7 @@
 <ul>
 <li><p>2018 - 2020 : <b>Graduate Student</b>, <a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>, Uttar Pradesh, India</p>
 <ul>
-<li><p>Isolation and characterisation of pigment producing bacteria from Arctic stone</p>
+<li><p><a href="#MTech">Isolation and characterisation of pigment producing bacteria from Arctic stone</a></p>
 </li>
 </ul>
 
@@ -102,7 +102,7 @@
 <ul>
 <li><p>2016 - 2017 : <b>Undergraduate Student</b>, <a href="https://www.nita.ac.in/">NIT Agartala</a>, Tripura, India</p>
 <ul>
-<li><p>Optimisation of biofilm formation by <i>Pseudomonas aeruginosa</i></p>
+<li><p><a href="#BTech">Optimisation of biofilm formation by <i>Pseudomonas aeruginosa</i></a></p>
 </li>
 </ul>
 
@@ -111,7 +111,7 @@
 <ul>
 <li><p>June 2016 : <b>Research Intern</b>, <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, Tamil Nadu, India</p>
 <ul>
-<li><p>Temperature data logging to detect minimal fluctuations during wound healing</p>
+<li><p><a href="#CMC">Temperature data logging to detect minimal fluctuations during wound healing</a></p>
 </li>
 </ul>
 
@@ -136,69 +136,51 @@
 </li>
 </ul>
 <h2><a name="Projects">Projects</a></h2>
-<h3>2018 &ndash; 2020 : Isolation and Characterisation of Pigment Producing Bacteria from Arctic Stone</h3>
+<h3>2018 &ndash; 2020 : <a name="MTech">Isolation and Characterisation of Pigment Producing Bacteria from Arctic Stone</a></h3>
 <table style="width:100%">
 	<tbody>
 		<tr>
-			<td width="30%" align="center">
-				<img class="image" src="Images/MTech.png" title="Jenifar Das" width="100%" height="50%">
+			<td width="25%" align="center">
+				<img class="image" src="Images/MTech.png" align="left" width="218" height="200">
 			</td>
-			<td width="70%" align="center">
+			<td width="75%" align="center">
 				<p align="justify" style="margin-left:0.5em">
-					Arctic stone sample having pigmented spots have been assessed to isolate and identify pigment producing bacteria. Pigments have vast industrial and medical applications as organic food colorant, textiles colorant and fluorescence based indicator. Pigments (light-absorbing compounds) are generally produced by bacteria in their lifecycle for the purpose of survival. In this work, we have isolated and explored bacterial strains that produce pigments from Arctic stone sample. We have isolated five potential pigment producing bacterial strains. Further, study confirmed that four bacterial strains having potential to produce pigments (1<sup>st</sup> strain produces yellow pigment, 2<sup>nd</sup> strain produces red pigment, 3<sup>rd</sup> strain produces pink pigment, and 4<sup>th</sup> strain produces cream colored pigment). We have optimized the conditions such as growth medium (nutrient broth), temperature (25℃) and pH (alkaline pH) for the growth of the strains and for production of pigments. Morphology of bacterial cells has been identified using different microscopes. The pigments were extracted by solvent extraction method and analyzed by scanning the absorbance with a UV-Vis spectrophotometer. These strains are being characterized using different biochemical tests and 16S rDNA sequencing.
+					Bacteria generally produce pigments (light-absorbing compounds) in their lifecycle for survival. Pigments have vast industrial and medical applications, such as organic food colourants, textiles colourants, fluorescence-based indicators, etc. This work assessed Arctic stone samples with pigmented spots to isolate and identify pigment-producing bacteria. We have isolated five potential pigment-producing bacterial strains. Our study confirmed that four bacterial strains have the potential to produce pigments (1<sup>st</sup> strain produces yellow pigment, 2<sup>nd</sup> strain produces red pigment, 3<sup>rd</sup> strain produces pink pigment, and the 4<sup>th</sup> strain produces cream coloured pigment). We optimised the conditions such as growth medium (nutrient broth), temperature (25℃) and pH (alkaline) for the growth of the strains and the production of pigments. The morphology of bacterial cells was identified using different microscopes. The pigments were extracted by solvent extraction and analysed by scanning the absorbance with a UV-Vis spectrophotometer. Then the strains were characterised using different biochemical tests and 16S rDNA sequencing.
 				</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
-<h2><a name="Education">Education</a></h2>
-<ul>
-<li><p>2018 - 2020 : <b>MTech</b> in Biochemical Engineering at <a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>, Uttar Pradesh, India</p>
-</li>
-<li><p>2013 - 2017 : <b>BTech</b> in Bio Engineering at <a href="https://www.nita.ac.in/">NIT Agartala</a>, Tripura, India</p>
-</li>
-</ul>
-<h2><a name="Achievements">Achievements</a></h2>
-<ul>
-<li><p>2018 - 2020 : <b>GATE Fellowship</b> for MTech by Ministry of Education, Government of India</p>
-</li>
-<li><p>2017 : <b>Basic Medical Coding Certificate</b> from Intelenet Training Academy, Chennai, Tamil Nadu, India</p>
-</li>
-<li><p>2012 : <b>Certification on Computer Application</b> from The Computer Point, New Delhi, India</p>
-</li>
-<li><p>2009 - 2010 : <b>Best Cadet</b>, North Eastern Region in <a href="https://en.wikipedia.org/wiki/National_Cadet_Corps_(India)">National Cadet Corps (NCC)</a> by Ministry of Defence, Government of India  </p>
-</li>
-<li><p>2009 : <b>Certificate - A</b> in <a href="https://en.wikipedia.org/wiki/National_Cadet_Corps_(India)">National Cadet Corps (NCC)</a> by Ministry of Defence, Government of India</p>
-</li>
-</ul>
-<h2><a name="Teaching">Teaching Assistance</a></h2>
-<ul>
-<li><p>IIT Varanasi : Genetic Engineering - Fall 2019</p>
-</li>
-<li><p>IIT Varanasi : Biochemical Engineering Lab - Spring 2019, Fall 2018</p>
-</li>
-</ul>
-<h2><a name="Conferences">Conferences and Workshops</a></h2>
-<ul>
-<li><p><i>Indo-US Conference on Bioengineering and Regenerative Medicine</i> <br />
-<b>Poster Presenter</b> <br />
-IIT Varanasi, Uttar Pradesh, India, February 2020</p>
-</li>
-</ul>
-<ul>
-<li><p><i>GIAN Course on Nanomedicine: Applications, Challenges and Perspectives</i> <br />
-<b>Attendee</b> <br />
-NIT Agartala, Tripura, India, March &ndash; April 2016</p>
-</li>
-</ul>
-<ul>
-<li><p><i>National Seminar on Recent Trends in Research, Development and Innovations in Chemical Industries</i> <br />
-<b>Attendee</b> <br />
-NIT Agartala, Tripura, India, September 2014</p>
-</li>
-</ul>
-<h2><a name="Outside">Outside of Work</a></h2>
-<p>I am trained in <a href="https://en.wikipedia.org/wiki/Bharatanatyam">Bharatanatyam</a> form of the Indian classical dance. I also enjoy playing the guitar and reading political philosophy.</p>
+<h3>2016 &ndash; 2017 : <a name="BTech">Optimisation of biofilm formation by Pseudomonas aeruginosa</a></h3>
+<table style="width:100%">
+	<tbody>
+		<tr>
+			<td width="75%" align="center">
+				<p align="justify" style="margin-right:0.5em">
+					<i>Pseudomonas aeruginosa</i> is one of the most frequently found bacterial pathogens in patients with chronic infections, such as chronic wounds, cystic fibrosis, etc. The persistence of <i>P. aeruginosa</i> in these infections is enabled by its ability to form biofilms. Standard antibiotic treatments that are effective against bacteria living as single cells are generally unsuccessful against biofilms. Understanding the physiological adaptations of bacterial biofilms will make it possible to design specific countermeasures and treatments for biofilm-based persistent infections. In this work, we investigated conditions underlying biofilm formation using parameters such as time, cell numbers, etc. We observed that the quantity of biofilm content increases with time and cell number. Our analysis provides insights into the conditions in which <i>P. aeruginosa</i> regulates its metabolism to synthesise molecules that are important for biofilm formation. Based on these insights, we conclude that a new cell signalling pathway may be targeted to develop anti-biofilm drugs.
+				</p>
+			</td>
+			<td width="25%" align="center">
+				<img class="image" src="Images/BTech.png" align="right" width="201" height="200">
+			</td>
+		</tr>
+	</tbody>
+</table>
+<h3>June 2016 : <a name="CMC">Temperature data logging to detect minimal fluctuations during wound healing</a></h3>
+<table style="width:100%">
+	<tbody>
+		<tr>
+			<td width="25%" align="center">
+				<img class="image" src="Images/CMC.jpg" align="left" width="363" height="200">
+			</td>
+			<td width="75%" align="center">
+				<p align="justify" style="margin-left:0.5em">
+					Wound healing is the process by which skin and other body tissue repair themselves after injury. The temperature of the wound bed optimal for healing lies between the range of 33 and 42 ℃. Wound healing is delayed when the temperature is below or above this range. Thus there is a necessity for a device that accurately and continuously monitors the temperature of the wound. We made a device using an LM35 temperature sensor, an analog data logger, a rechargeable battery, a USB flash drive and some connecting wires. The device was tested first with cold water in a beaker and then on the intact skin of a human subject. The data was stored and interpreted using MS Excel. A graph was plotted to show the variations in temperature with time. This data logger can continuously measure the temperature at the wound bed, which could help optimise the healing process.
+				</p>
+			</td>
+		</tr>
+	</tbody>
+</table>
 <hr size="2" noshade color="#aaaaaa">
 <center><p><b><a href="#Top">Back to Top</a></b></p></center>
 <hr size="2" noshade color="#aaaaaa">
