--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		</tr>
 	</tbody>
 </table>
-<h3>2016 &ndash; 2017 : <a name="BTech">Optimisation of biofilm formation by Pseudomonas aeruginosa</a></h3>
+<h3>2016 &ndash; 2017 : <a name="BTech">Optimisation of Biofilm Formation by Pseudomonas aeruginosa</a></h3>
 <table style="width:100%">
 	<tbody>
 		<tr>
@@ -166,7 +166,7 @@
 		</tr>
 	</tbody>
 </table>
-<h3>June 2016 : <a name="CMC">Temperature data logging to detect minimal fluctuations during wound healing</a></h3>
+<h3>June 2016 : <a name="CMC">Temperature Data Logging to Detect Minimal Fluctuations during Wound Healing</a></h3>
 <table style="width:100%">
 	<tbody>
 		<tr>
