--- a/education.html
+++ b/education.html
@@ -26,8 +26,8 @@
 				<img class="photo" src="Images/Jenifar-Das.jpg" title="Jenifar Das" width="103" height="103">
 			</td>
 			<td width="40%" align="center"><p align="left">
-				Krishna Nagar Nutan Palli<br>
-				Agartala, West Tripura, India - 799001<br>
+				Carrer del Maresme 151<br>
+				Barcelona, Catalunya, Spain - 08019<br>
 				<b>Email:</b> jenifardasbce at gmail.com<br>
 				<a href="mailto:jenifardasbce@gmail.com">
 					<img class="logo" src="Images/mail.svg" title="Send Email"">
