--- a/education.html
+++ b/education.html
@@ -65,7 +65,11 @@
 <ul>
 <li><p>2018 - 2020 : <b>GATE Fellowship</b> for MTech by Ministry of Education, Government of India</p>
 </li>
+<li><p>2017 : <b>Rising Star Award</b> from Intelenet Global Services (now Teleperformance), Chennai, Tamil Nadu, India</p>
+</li>
 <li><p>2017 : <b>Basic Medical Coding Certificate</b> from Intelenet Training Academy, Chennai, Tamil Nadu, India</p>
+</li>
+<li><p>2013 – 2017 : <b>SC Merit Scholarship</b> for BTech by Ministry of Social Justice and Empowerment, Government of India</p>
 </li>
 <li><p>2012 : <b>Certification on Computer Application</b> from The Computer Point, New Delhi, India</p>
 </li>
@@ -107,7 +111,7 @@ NIT Agartala, Tripura, India, September 2014</p>
 <hr size="2" noshade color="#aaaaaa">
 
 <footer>
-	<center><font size="-1">&copy; 2023 Jenifar Das. All Rights Reserved</font></center>
+	<center><font size="-1">&copy; 2024 Jenifar Das. All Rights Reserved</font></center>
 </footer>
 </div>
 </body>
