--- a/index.html
+++ b/index.html
@@ -69,13 +69,15 @@
 </ul>
 <h2><a name="Experience">Research Experience</a></h2>
 <ul>
-<li><p>June 2020 - April 2021 : <b>Research Associate</b>, <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, Maharastra, India</p>
+<li><p>June 2020 - May 2021 : <b>Research Associate</b>, <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, Maharastra, India</p>
 <ul>
 <li><p>Plasmid sequence confirmation of surface protein of <i>SARS-CoV-2</i> virus</p>
 </li>
 <li><p>Plasmid extraction by ELISA technique</p>
 </li>
-<li><p>Production of biosimilar monoclonal antibody (mAb): transfection, upstream processing, and purification</p>
+<li><p>Transfection for production of monoclonal antibody (mAb)</p>
+</li>
+<li><p>Protein purification using chromatographic techniques</p>
 </li>
 </ul>
 
@@ -186,7 +188,7 @@
 <hr size="2" noshade color="#aaaaaa">
 
 <footer>
-	<center><font size="-1">&copy; 2023 Jenifar Das. All Rights Reserved</font></center>
+	<center><font size="-1">&copy; 2024 Jenifar Das. All Rights Reserved</font></center>
 </footer>
 </div>
 </body>
